--- a/todo
+++ b/todo
@@ -1,21 +1,22 @@
 TODO:
 
 Infra:
-- Upload to ECR the mongo image
-- EKS
-	- Public subnet
-	- Application Load Balancer controller
-- Helm depployment of Mongo
-	- Ingress Annotaion of ALB 
+[ ] Launcher + Docker
+[ ] Upload to ECR the mongo image local
+[ ] EKS
+	[ ] Public subnet
+	[ ] Application Load Balancer controller
+[ ] Helm depployment of Mongo
+	[ ] Ingress Annotaion of ALB
 
 Optional
-	- ArgoCD/Flux
-	- Autoscaler
-	- Multiple AZ
-	- WAF
-	- Cloudfront
-	- Backup
-	- Documentation of setting env from scratch
+	[ ] ArgoCD/Flux
+	[ ] Autoscaler
+	[ ] Multiple AZ
+	[ ] WAF
+	[ ] Cloudfront
+	[ ] Backup
+	[ ] Documentation of setting env from scratch
 
 
 
