--- a/todo
+++ b/todo
@@ -2,21 +2,21 @@ TODO:
 
 Infra:
 [V] Launcher + Docker
-[ ] Upload to ECR the mongo image local
 [V] VPC
 	[V] VPC
 	[V] Subnets
 	[V] Public subnet
-[ ] EKS
-	[ ] Application Load Balancer controller
-[ ] Helm depployment of Mongo
+[/] EKS
+	[ ] Application Load Balancer controller ?
+[ ] Helm deployment of Mongo
+	[ ] Upload to ECR the mongo image local
 	[ ] Ingress Annotaion of ALB
 
 Optional
 	[ ] ArgoCD/Flux
 	[ ] Autoscaler
 	[ ] Multiple AZ
-	[ ] WAF
+	[V] WAF
 	[ ] Cloudfront
 	[ ] Backup
 	[ ] Documentation of setting env from scratch
